Skip no display desktop files for wmclass match.

This CL skips no display desktop files when trying to find an app ID
with wmclass. Some apps create some no display entries and they cause
the current logic to unable to uniquely identify an app entry from the
registry.

BUG=chromium:893690
TEST=Manually verified on an eve device.

Change-Id: I88f24f87d9af125032ea82fd21f8a7b97f3ca998
Reviewed-on: https://chromium-review.googlesource.com/c/1277679
Reviewed-by: Timothy Loh <timloh@chromium.org>
Commit-Queue: Tim Zheng <timzheng@chromium.org>
Cr-Commit-Position: refs/heads/master@{#599002}
Former-commit-id: 1b15ad0db9fa426f52d231197e90cf5311b35567